src/objects/IE_Service_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Account_RecordType__c</fullName>
        <label>Account RecordType</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_RecordType__c</fullName>
        <label>Address RecordType</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_User_Id__c</fullName>
        <label>Batch User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_RecordType__c</fullName>
        <label>Contact RecordType</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaikinAccountId__c</fullName>
        <label>DaikinAccountId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IE_Interface_User_Id__c</fullName>
        <label>IE Interface User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IndividualService__c</fullName>
        <label>IndividualService</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrganizationService__c</fullName>
        <label>OrganizationService</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubscriptionService__c</fullName>
        <label>SubscriptionService</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitResetService__c</fullName>
        <label>UnitResetService</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitService__c</fullName>
        <label>UnitService</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Record_Type__c</fullName>
        <label>Unit Record Type</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endpoint__c</fullName>
        <label>endpoint</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <label>username</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>IE_Service_Configuration</label>
</CustomObject>